--- a/backend/layout/plate.ejs
+++ b/backend/layout/plate.ejs
@@ -15,7 +15,8 @@
     <title>ProjectX</title>
   </head>
   <header><%-include("../include/header.ejs")%></header>
-  <%-include("../include/flash.ejs")%> <%-body%>
+  <%-include("../include/side.ejs")%> <%-include("../include/flash.ejs")%>
+  <%-body%>
 
   <footer><%-include("../include/footer.ejs")%></footer>
   <script src="/app.js"></script>
