--- a/backend/views/search.ejs
+++ b/backend/views/search.ejs
@@ -4,6 +4,9 @@
 
 <% if (results.length === 0) { %>
 <h2 class="resultiszero">No videos found.</h2>
+<a href="/" class="home-btn">🏠 Go to Homepage</a>
+
+
 <% } else { %>
     <div class="container">
   <% results.forEach(data => { %>
