--- a/backend/include/footer.ejs
+++ b/backend/include/footer.ejs
@@ -79,6 +79,10 @@
     background: rgba(255, 255, 255, 0.1);
     box-shadow: -4px 0 13px rgba(0, 0, 0, 0.3);
     color: beige;
-    margin-top: 2rem;
+    position: absolute;
+    width: 100%;
+    margin-top: 100%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 </style>
