--- a/backend/include/side.ejs
+++ b/backend/include/side.ejs
@@ -33,17 +33,12 @@
   <div class="containerSidebar">
     <div>
       <select name="" id="categorydropdown">
-        <option value=""></option>
-        <option value="/video/caterogie/new">new</option>
-        <option value="/video/caterogie/nepali">nepali</option>
-        <option value="/video/caterogie/new%20video">new video</option>
-        <option value="/video/caterogie/xxx">xxx</option>
-        <option value="/video/caterogie/trending">trending</option>
-        <option value="/video/caterogie/kanda">Kanda</option>
-        <option value="/video/caterogie/desi">desi</option>
-        <option value="/video/caterogie/school">school</option>
-        <option value="/video/caterogie/firsttime">first time</option>
-        <option value="/video/caterogie/virgin">virgin</option>
+        <option value="/video/categories/tags">Category</option>
+        <option value="/video/categories/tags">new</option>
+        <option value="/video/categories/tags">new</option>
+        <option value="/video/categories/tags">new</option>
+        <option value="/video/categories/tags">new</option>
+        <option value="/video/categories/tags">new</option>
       </select>
     </div>
   </div>
