--- a/backend/include/header.ejs
+++ b/backend/include/header.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ProjectX - Video Sharing Platform</title>
+    <title>Tourist</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -311,7 +311,8 @@
         .vs-search-container {
           position: absolute;
           inset: 0 0 0 0;
-          left: -2rem;
+          left: 1.5rem;
+          top: 4.5rem;
           /* top: var(--vs-height); */
           width: fit-content;
           padding: 0.8rem 1rem;
@@ -341,7 +342,8 @@
           display: flex;
         }
         .vs-search-btn {
-          top: 1.2rem;
+          top: -0.1rem;
+          font-size: 1.5rem;
           left: 15rem;
         }
       }
@@ -367,7 +369,9 @@
       <nav class="vs-navbar">
         <div class="vs-container">
           <div class="vs-left">
-            <a class="vs-logo" style="font-weight: bolder">ProjectX</a>
+            <a class="" href="/" style="font-weight: bolder; cursor: pointer"
+              >Tourist</a
+            >
           </div>
           <div class="vs-search-container">
             <form action="/search" method="get">
