--- a/backend/layout/plate.ejs
+++ b/backend/layout/plate.ejs
@@ -12,12 +12,12 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
     />
     <link rel="stylesheet" href="/style.css" />
-    <title>ProjectX</title>
+    <title>Tourist</title>
   </head>
   <header><%-include("../include/header.ejs")%></header>
   <%-include("../include/side.ejs")%> <%-include("../include/flash.ejs")%>
   <%-body%>
-
   <footer><%-include("../include/footer.ejs")%></footer>
+  <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
   <script src="/app.js"></script>
 </html>
