--- a/backend/views/home.ejs
+++ b/backend/views/home.ejs
@@ -11,10 +11,11 @@
           />
         </div>
         <div class="video-player">
-          <video controls>
+          <!-- <video controls>
             <source src="<%= data.video.url %>" type="video/mp4" />
             Your browser does not support the video tag.
-          </video>
+          </video> -->
+          <!-- <video id="video-<%= data._id %>" controls width="320" height="180"></video> -->
         </div>
         <div class="card-info">
           <p><%=data.title%></p>
