--- a/backend/views/categories.ejs
+++ b/backend/views/categories.ejs
@@ -1,6 +1,6 @@
 <%layout("../layout/plate.ejs")%>
 
-<h2 class="prompt">Categorized By "<%= query %>"</h2>
+<h2 class="prompt" style="margin-top:1rem;">Categorized By "<%= query %>"</h2>
 
 <% if (results.length === 0) { %>
 <a href="/" class="home-btn">🏠 Go to Homepage</a>
@@ -35,3 +35,5 @@
     <%}%>
 </div>
 </div>
+
+
