--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -15,7 +15,7 @@ body {
   background-color: var(--bgcolor);
   margin: 0;
   padding: 0;
-  margin-top: 5rem;
+  margin-top: 3rem;
   overflow-x: hidden;
   overflow-y: auto;
 }
@@ -281,7 +281,8 @@ a {
     touch-action: manipulation;
     overflow-x: hidden;
     overflow-y: auto;
-    padding: 1.5rem 2rem;
+    padding: 0rem 0rem;
+    margin: 3rem auto;
   }
 
   .pagination i {
@@ -292,6 +293,16 @@ a {
     padding: 0 0.7em 0 0.7em;
   }
   #resultsfrinput {
-    margin-left: -1rem;
+    margin-left: -2rem;
+    width: 300px;
+    height: 50px;
+    border-radius: 10px;
+    padding: 0;
+  }
+  #resultsfrinput h3 {
+    font-size: 0.7rem;
+  }
+  #resultsfrinput p {
+    font-size: 0.7rem;
   }
 }
