--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -194,11 +194,16 @@ a {
 .card:hover {
   transform: translateY(-5px);
 }
-
+.thumbnail {
+  width: 350px; /* or whatever you want */
+  height: 270px; /* keep ratio consistent */
+  overflow: hidden;
+}
 .thumbnail img {
   width: 100%;
   height: 100%;
   display: block;
+  object-fit: cover;
 }
 
 .video-player video {
