--- a/backend/views/show.ejs
+++ b/backend/views/show.ejs
@@ -82,7 +82,7 @@
 
   @media (max-width: 768px) {
     .vidContainer {
-      margin: -3.5rem auto;
+      margin: 3.5rem auto;
     }
     .videoInfo {
       font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -93,15 +93,18 @@
       font-size: 0.7rem;
       white-space: wrap;
       font-weight: 10;
+      color: whitesmoke;
     }
     .videoInfo .tag {
       position: relative;
       left: -3rem;
+      top: 10px;
     }
     .videoInfo .tag h1 {
-      padding: 0.4em;
-      font-family: Impact;
-      font-size: 0.7rem;
+      font-size: 0.5rem;
+      color: white;
+      padding: 0.8em;
+      font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
     }
 
     .videoInfo .uploader-info h2 {
